--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="https://owlpentest.com/index.html" id="logo">OwlPen CDN Network</a></h1>
+								<h1><a href="https://owlpentest.com/index.html" id="logo">OwlPen Archive Database</a></h1>
 								<hr />
 							</header>
 						</div>
