--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Owl Pen-Testing</title>
         <meta charset="utf-8" />
-        <link rel="icon" href="assets/images/logo.png" />
+        <link rel="icon" href="https://cdn.owlpentest.com/assets/images/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
 		<!-- Meta Tags -->
@@ -63,9 +63,6 @@
 
 							<!-- Contact -->
 								<section class="contact">
-									<header>
-										<a target="blank_" href="https://uptime.owlpentest.com/"><h3>Check if any of my projects are down.</h3></a>
-									</header>
 									<ul class="icons">
 										<li><a target="_blank" href="https://github.com/GavTheDev/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 										<li><a target="_blank" href="https://twitter.com/ellogav" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
